# text_classification_with_fastText

./: README.md  pyproject.toml
